@@ -26,7 +26,7 @@
  * @summary Verifies setting a breakpoint in Continuation.yield() followed by single stepping
  * @compile ContYieldBreakPointTest.java
  * @modules java.base/jdk.internal.vm
- * @run main/othervm/native -agentlib:ContYieldBreakPointTest ContYieldBreakPointTest
+ * @run main/othervm/native --enable-preview -agentlib:ContYieldBreakPointTest ContYieldBreakPointTest
  */
 
 import jdk.internal.vm.Continuation;
