@@ -33,7 +33,9 @@
  *          jdk.jartool/sun.tools.jar
  * @build jdk.test.lib.helpers.ClassFileInstaller jdk.test.lib.compiler.InMemoryJavaCompiler
  * @run main RedefineClassHelper
- * @run main/othervm/timeout=180 -Xint -javaagent:redefineagent.jar -Xlog:redefine+class+iklass+add=trace,redefine+class+iklass+purge=trace,class+loader+data=debug,safepoint+cleanup,gc+phases=debug:rt.log RedefineRunningMethods
+ * @run main/othervm/timeout=180 -Xint --enable-preview -javaagent:redefineagent.jar
+ *     -Xlog:redefine+class+iklass+add=trace,redefine+class+iklass+purge=trace,class+loader+data=debug,safepoint+cleanup,gc+phases=debug:rt.log
+ *     RedefineRunningMethods
  */
 
 import jdk.internal.vm.Continuation;
